--- a/gui/liquidadores/liquidadorJubilados.ui
+++ b/gui/liquidadores/liquidadorJubilados.ui
@@ -121,9 +121,6 @@ background-color:#FFFFFF
            <property name="mouseTracking">
             <bool>false</bool>
            </property>
-           <property name="tabletTracking">
-            <bool>false</bool>
-           </property>
            <property name="styleSheet">
             <string notr="true"/>
            </property>
@@ -143,6 +140,9 @@ background-color:#FFFFFF
             <bool>false</bool>
            </property>
            <property name="wordWrap">
+            <bool>false</bool>
+           </property>
+           <property name="tabletTracking" stdset="0">
             <bool>false</bool>
            </property>
           </widget>
@@ -693,6 +693,9 @@ color: #FFFFFF;
        <bold>true</bold>
       </font>
      </property>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
     </widget>
    </item>
   </layout>
